--- a/up.html
+++ b/up.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
+    <a href="index.html" class="back-btn">← Back to Home</a>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=4.0">
     <title>UP Scholarship Status 2026 | Check Payment Status</title>
