--- a/up.html
+++ b/up.html
@@ -62,7 +62,7 @@
         <div></div>
     </div>
     <div class="nav-links" id="navLinks">
-        <a href="#">🏠 Home</a>
+        <a href="index.html" class="back-btn">🏠 Home</a>
         <a href="#">📝 Registration</a>
         <a href="#">🔍 Check Status</a>
         <a href="#">📞 Contact Us</a>
