--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p>&copy; 2026 ScholarshipDirect | Designed for Students</p>
         <div class="footer-links">
             <a href="about.html">About Us</a> | 
-            <a href="about.html#contact">Contact</a> | 
+            <a href="contact.html">Contact</a> | 
             <a href="#">Privacy Policy</a>
         </div>
     </footer>
