--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="footer-links">
             <a href="about.html">About Us</a> | 
             <a href="contact.html">Contact</a> | 
-            <a href="#">Privacy Policy</a>
+            <a href="privacy.html">Privacy Policy</a>
         </div>
     </footer>
 
