--- a/up.html
+++ b/up.html
@@ -108,7 +108,7 @@
                 </tr>
                 <tr>
                     <td>Check PFMS Status</td>
-                    <td><a href="#" class="btn-sm">Click Here</a></td>
+                    <td><a href="https://pfms.nic.in/SitePages/KnowYourPayment_Dw_NewNew.aspx" class="btn-sm">Click Here</a></td>
                 </tr>
             </tbody>
         </table>
