--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <a href="jharkhand.html" class="state-card">Jharkhand</a>
             <a href="punjab.html" class="state-card">Punjab</a>
             <a href="maharashtra.html" class="state-card">Maharashtra</a>
+            <a href="westbengal.html" class="state-card">West Bengal</a>
             </div>
     </div>
 
