--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <a href="punjab.html" class="state-card">Punjab</a>
             <a href="maharashtra.html" class="state-card">Maharashtra</a>
             <a href="westbengal.html" class="state-card">West Bengal</a>
+            <a href="odisha.html" class="state-card">Odisha</a>
             </div>
     </div>
 
