--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <a href="maharashtra.html" class="state-card">Maharashtra</a>
             <a href="westbengal.html" class="state-card">West Bengal</a>
             <a href="odisha.html" class="state-card">Odisha</a>
+            <a href="gujarat.html" class="state-card">Gujrat</a>
             </div>
     </div>
 
