--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <a href="westbengal.html" class="state-card">West Bengal</a>
             <a href="odisha.html" class="state-card">Odisha</a>
             <a href="gujarat.html" class="state-card">Gujrat</a>
+            <a href="andhrapradesh.html" class="state-card">Andhra Pradesh</a>
             </div>
     </div>
 
