--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <a href="odisha.html" class="state-card">Odisha</a>
             <a href="gujarat.html" class="state-card">Gujrat</a>
             <a href="andhrapradesh.html" class="state-card">Andhra Pradesh</a>
+            <a href="telangana.html" class="state-card">Telangana</a>
             </div>
     </div>
 
