--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <a href="gujarat.html" class="state-card">Gujrat</a>
             <a href="andhrapradesh.html" class="state-card">Andhra Pradesh</a>
             <a href="telangana.html" class="state-card">Telangana</a>
+            <a href="tamilnadu.html" class="state-card">Tamil Nadu</a>
             </div>
     </div>
 
