--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <a href="andhrapradesh.html" class="state-card">Andhra Pradesh</a>
             <a href="telangana.html" class="state-card">Telangana</a>
             <a href="tamilnadu.html" class="state-card">Tamil Nadu</a>
+            <a href="kerala.html" class="state-card">Kerals</a>
             </div>
     </div>
 
