--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <a href="telangana.html" class="state-card">Telangana</a>
             <a href="tamilnadu.html" class="state-card">Tamil Nadu</a>
             <a href="kerala.html" class="state-card">Kerals</a>
+            <a href="chhattisgarh.html" class="state-card">Chhattisgarh</a>
             </div>
     </div>
 
