--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <a href="tamilnadu.html" class="state-card">Tamil Nadu</a>
             <a href="kerala.html" class="state-card">Kerals</a>
             <a href="chhattisgarh.html" class="state-card">Chhattisgarh</a>
+            <a href="assam.html" class="state-card">Assam</a>
             </div>
     </div>
 
