--- a/andhrapradesh.html
+++ b/andhrapradesh.html
@@ -166,6 +166,11 @@
 <footer>
     <p>© 2026 ScholarshipDirect | Educational Services for Andhra Pradesh</p>
     <p style="font-size: 0.85rem; margin-top: 15px; opacity: 0.6;">Disclaimer: This is an information portal and not the official government website.</p>
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
