--- a/assam.html
+++ b/assam.html
@@ -297,6 +297,11 @@
 <footer>
     <p>© 2026 ScholarshipDirect | Proudly Serving the Students of Assam</p>
     <p>We are an independent portal and not an official government entity. Information is provided for educational purposes.</p>
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
