--- a/bihar.html
+++ b/bihar.html
@@ -64,6 +64,11 @@
 
 <footer style="text-align: center; padding: 40px; color: #888;">
     © 2026 ScholarshipDirect | Designed for Bihar Students
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
