--- a/chhattisgarh.html
+++ b/chhattisgarh.html
@@ -157,6 +157,11 @@
 
 <footer>
     © 2026 ScholarshipDirect | Chhattisgarh Student Support
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
