--- a/gujarat.html
+++ b/gujarat.html
@@ -157,6 +157,11 @@
 
 <footer>
     <p>© 2026 ScholarshipDirect | Gujarat Education Helpdesk</p>
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
