--- a/jharkhand.html
+++ b/jharkhand.html
@@ -60,6 +60,11 @@
 
 <footer style="text-align: center; padding: 40px; color: #888; font-size: 0.85rem;">
     © 2026 ScholarshipDirect | Jharkhand Student Support Desk
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
