--- a/kerala.html
+++ b/kerala.html
@@ -165,6 +165,11 @@
 
 <footer>
     © 2026 ScholarshipDirect | Kerala State Student Services Hub
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
