--- a/maharashtra.html
+++ b/maharashtra.html
@@ -136,6 +136,11 @@
 <footer>
     <p>© 2026 ScholarshipDirect. Not an Official Government Website.</p>
     <p style="font-size: 0.8rem; opacity: 0.6; margin-top: 10px;">Information provided for educational purposes only.</p>
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
