--- a/odisha.html
+++ b/odisha.html
@@ -141,6 +141,11 @@
 <footer>
     <p>© 2026 ScholarshipDirect | Odisha Student Resource Center</p>
     <p style="font-size: 0.8rem; margin-top: 10px; opacity: 0.5;">Disclaimer: We are an information-sharing platform and not affiliated with the Government of Odisha.</p>
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
