--- a/punjab.html
+++ b/punjab.html
@@ -135,6 +135,11 @@
 <footer>
     <p>© 2026 ScholarshipDirect. All Rights Reserved.</p>
     <p style="font-size: 0.8rem; margin-top: 10px; color: #aaa;">Disclaimer: We provide information only. For official updates, visit the government portal.</p>
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
