--- a/rajasthan.html
+++ b/rajasthan.html
@@ -68,6 +68,11 @@
 
 <footer style="text-align: center; padding: 40px; color: #888; font-size: 0.85rem;">
     © 2026 ScholarshipDirect | Empowering Rajasthan's Students
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
