--- a/tamilnadu.html
+++ b/tamilnadu.html
@@ -162,6 +162,11 @@
 
 <footer>
     <p>© 2026 ScholarshipDirect | Tamil Nadu Student Resource Center</p>
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
