--- a/westbengal.html
+++ b/westbengal.html
@@ -146,6 +146,11 @@
 <footer>
     <p>© 2026 ScholarshipDirect | West Bengal Education Support Hub</p>
     <p style="font-size: 0.8rem; margin-top: 15px; opacity: 0.7;">Note: We are not an official government entity. Information is for guidance purposes only.</p>
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 </body>
