--- a/up.html
+++ b/up.html
@@ -121,6 +121,11 @@
 
 <footer>
     <p>&copy; 2026 UP Scholarship Help Portal | Not an Official Website</p>
+    <div class="footer-links">
+            <a href="about.html">About Us</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="privacy.html">Privacy Policy</a>
+    </div>
 </footer>
 
 <script>
