--- a/up.html
+++ b/up.html
@@ -76,7 +76,7 @@
 <section class="hero">
     <h1>UP Scholarship Status 2026</h1>
     <p>Apna Registration Number aur Date of Birth taiyar rakhein.</p>
-    <a href="#status-table" class="main-btn">CHECK STATUS NOW</a>
+    <a href="https://pfms.nic.in/SitePages/KnowYourPayment_Dw_NewNew.aspx" class="main-btn">CHECK STATUS NOW</a>
 </section>
 
 <div class="container">
