--- a/index.html
+++ b/index.html
@@ -72,6 +72,40 @@
             <a href="assam.html" class="state-card">Assam</a>
             </div>
     </div>
+    <div style="max-width: 950px; margin: 30px auto; padding: 30px; background: #ffffff; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.08); font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #444;">
+    
+    <h2 style="color: #1e3799; text-align: center; font-size: 28px; margin-bottom: 10px;">UP Scholarship Status 2025-2026: A Complete Guide</h2>
+    <p style="text-align: center; color: #777; margin-bottom: 30px;">Track your application and payment status online with ease.</p>
+
+    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+        <div style="background: #f8f9fa; padding: 20px; border-radius: 8px; border-top: 4px solid #1e3799;">
+            <h3 style="color: #1e3799;">How to Check Status?</h3>
+            <ol style="padding-left: 20px; font-size: 15px; line-height: 1.8;">
+                <li>Visit the official <b>UP Scholarship Portal</b>.</li>
+                <li>Navigate to the "Status" or "Student Login" section.</li>
+                <li>Enter your <b>Registration Number</b> and Date of Birth.</li>
+                <li>Fill in the Captcha and click on the <b>Submit</b> button.</li>
+                <li>Your current verification status will appear on the screen.</li>
+            </ol>
+        </div>
+
+        <div style="background: #f8f9fa; padding: 20px; border-radius: 8px; border-top: 4px solid #eb2f06;">
+            <h3 style="color: #eb2f06;">Key Documents Needed</h3>
+            <ul style="padding-left: 20px; font-size: 15px; line-height: 1.8;">
+                <li>Aadhaar Card (Linked with Mobile)</li>
+                <li>Income & Caste Certificate</li>
+                <li>Previous Year Marksheet</li>
+                <li>Bank Passbook (NPCI Seeded)</li>
+                <li>Fee Receipt & Bonafide Certificate</li>
+            </ul>
+        </div>
+    </div>
+
+    <div style="margin-top: 25px; padding: 15px; background: #e3f2fd; border-radius: 8px; font-size: 15px;">
+        <strong>Pro Tip:</strong> Ensure your Bank Account is mapped with <b>NPCI</b>. If not, your payment might get stuck even after verification.
+    </div>
+</div>
+
 
     <footer>
         <p>&copy; 2026 ScholarshipDirect | Designed for Students</p>
