--- a/index.html
+++ b/index.html
@@ -104,6 +104,36 @@
     <div style="margin-top: 25px; padding: 15px; background: #e3f2fd; border-radius: 8px; font-size: 15px;">
         <strong>Pro Tip:</strong> Ensure your Bank Account is mapped with <b>NPCI</b>. If not, your payment might get stuck even after verification.
     </div>
+
+        <div style="max-width: 950px; margin: 30px auto; padding: 30px; background: #fff; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.08);">
+    <h2 style="color: #1e3799; text-align: center; margin-bottom: 30px;">Frequently Asked Questions (FAQs)</h2>
+
+    <div style="border-bottom: 1px solid #eee; padding: 15px 0;">
+        <p style="font-weight: bold; font-size: 17px; margin-bottom: 8px;">1. When will the UP Scholarship 2026 payment be disbursed?</p>
+        <p style="color: #555; font-size: 15px;">The scholarship amount is usually transferred to students' bank accounts between February and March 2026 via DBT (Direct Benefit Transfer).</p>
+    </div>
+
+    <div style="border-bottom: 1px solid #eee; padding: 15px 0;">
+        <p style="font-weight: bold; font-size: 17px; margin-bottom: 8px;">2. What does "Pending at District Scholarship Committee" mean?</p>
+        <p style="color: #555; font-size: 15px;">It means your application has been verified at the college level and is currently awaiting final approval from the District Social Welfare Department.</p>
+    </div>
+
+    <div style="border-bottom: 1px solid #eee; padding: 15px 0;">
+        <p style="font-weight: bold; font-size: 17px; margin-bottom: 8px;">3. Can I edit my form after submission?</p>
+        <p style="color: #555; font-size: 15px;">Yes, you can edit your form only during the "Correction Window" period announced by the department. Keep checking this portal for the dates.</p>
+    </div>
+
+    <div style="border-bottom: 1px solid #eee; padding: 15px 0;">
+        <p style="font-weight: bold; font-size: 17px; margin-bottom: 8px;">4. Why is my status showing 'Rejected by Bank'?</p>
+        <p style="color: #555; font-size: 15px;">This happens if your Aadhaar is not linked to your bank account or if your KYC is incomplete. Visit your bank immediately to resolve this.</p>
+    </div>
+
+    <div style="padding: 15px 0;">
+        <p style="font-weight: bold; font-size: 17px; margin-bottom: 8px;">5. How to track scholarship payment via PFMS?</p>
+        <p style="color: #555; font-size: 15px;">Go to the PFMS portal, enter your Bank Name and Account Number to track the real-time status of your scholarship credit.</p>
+    </div>
+</div>
+
 </div>
 
 
