--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </nav>
 
     <div class="hero">
-        <h2>Sabhi Indian States ki Scholarship Portals</h2>
-        <p>Direct Links, Status Check aur Application Portals ek hi jagah par.</p>
+        <h2>Scholarship Portals of All Indian States</h2>
+        <p>Direct links, status check and application portals all in one place.</p>
     </div>
 
     <div class="search-container">
