--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
 
     <nav>
         <h1>🎓 ScholarshipDirect</h1>
+        <div class="nav-links" id="navLinks">
+    <a href="index.html">🏠 Home</a>
+    <a href="#">📝 All States Portal</a>
+    <a href="#">📂 Required Documents</a>
+    <a href="#">🔔 Latest News</a>
+    <a href="#">🔍 Check PFMS Status</a>
+    <a href="https://t.me/YourChannel" style="background: #0088cc; color: white; border-radius: 5px;">📱 Join Telegram</a>
+    <a href="#">📞 Contact Us</a>
+</div>
+
     </nav>
 
     <div class="hero">
