--- a/index.html
+++ b/index.html
@@ -60,18 +60,17 @@
 <body>
 
     <nav>
-        <h1>🎓 ScholarshipDirect</h1>
-        <div class="nav-links" id="navLinks">
-    <a href="index.html">🏠 Home</a>
-    <a href="#">📝 All States Portal</a>
-    <a href="#">📂 Required Documents</a>
-    <a href="#">🔔 Latest News</a>
-    <a href="#">🔍 Check PFMS Status</a>
-    <a href="https://t.me/YourChannel" style="background: #0088cc; color: white; border-radius: 5px;">📱 Join Telegram</a>
-    <a href="#">📞 Contact Us</a>
-</div>
+    <h1>🎓 ScholarshipDirect</h1>
+    <div class="menu-toggle" onclick="toggleMenu()" style="cursor:pointer; color:white; font-size:24px; padding-right:15px;">
+        ☰
+    </div>
+    
+    <div class="nav-links" id="navLinks">
+        <a href="index.html">🏠 Home</a>
+        <a href="#">📝 All States Portal</a>
+        </div>
+</nav>
 
-    </nav>
 
     <div class="hero">
         <h2>Scholarship Portals of All Indian States</h2>
