--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
     </div>
     <a href="index.html">🏠 Home</a>
     <a href="#">📋 Full State List</a>
-    <a href="#">📝 UP Scholarship Status</a>
-    <a href="#">📙 Bihar Post-Matric</a>
-    <a href="#">💳 PFMS Payment Track</a>
+    <a href="https://gifmis.cga.gov.in/SitePages/KnowYourPayment_Dw_NewNew.aspx">📝 UP Scholarship Status</a>
+    <a href="https://pmsonline.bihar.gov.in/pmsbcebc2425dlog/pms/pms_online/studentapplicationstatusdetails.aspx">📙 Bihar Post-Matric</a>
+    <a href="https://pfms.nic.in/SitePages/KnowYourPayment_Dw_NewNew.aspx">💳 PFMS Payment Track</a>
     <a href="#">📂 Required Documents</a>
     <a href="#">📅 Latest Dates 2026</a>
-    <a href="#">📰 Education News</a>
+    <a href="https://www.thehindu.com/education/">📰 Education News</a>
     <a href="#">📞 Contact Us</a>
     <a href="#" style="background: #0088cc; color: white; text-align: center; margin: 20px; border-radius: 8px; font-weight: bold;">JOIN TELEGRAM</a>
 </div>
