--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <a href="https://gifmis.cga.gov.in/SitePages/KnowYourPayment_Dw_NewNew.aspx">📝 UP Scholarship Status</a>
     <a href="https://pmsonline.bihar.gov.in/pmsbcebc2425dlog/pms/pms_online/studentapplicationstatusdetails.aspx">📙 Bihar Post-Matric</a>
     <a href="https://pfms.nic.in/SitePages/KnowYourPayment_Dw_NewNew.aspx">💳 PFMS Payment Track</a>
-    <a href="#">📂 Required Documents</a>
+    <a href="requireddocuments.html">📂 Required Documents</a>
     <a href="#">📅 Latest Dates 2026</a>
     <a href="https://www.thehindu.com/education/">📰 Education News</a>
     <a href="#">📞 Contact Us</a>
