--- a/phone.html
+++ b/phone.html
@@ -68,21 +68,21 @@
                 <span>📍</span>
                 <div>
                     <h4>Official Address</h4>
-                    <p>Scholarship Direct HQ, <br>Lucknow, Uttar Pradesh, India - 226001</p>
+                    <p>Scholarship Direct HQ, <br>Khambharkhera, Lakhimpur, kheri, Uttar Pradesh, India - 261506</p>
                 </div>
             </div>
             <div class="info-item">
                 <span>📧</span>
                 <div>
                     <h4>Email Support</h4>
-                    <p>contact@scholarshipdirect.github.io<br>support@scholarshipdirect.com</p>
+                    <p>contact@scholarshipdirect.github.io<br>officialdipak@gmail.com</p>
                 </div>
             </div>
             <div class="info-item">
                 <span>📱</span>
                 <div>
-                    <h4>Join Telegram</h4>
-                    <p>For fastest updates: @ScholarshipDirect_Group</p>
+                    <h4>Teligram </h4>
+                    <p> upcoming</p>
                 </div>
             </div>
             <div class="info-item">
