--- a/phone.html
+++ b/phone.html
@@ -133,7 +133,7 @@
     <p>&copy; 2026 ScholarshipDirect.github.io | All Rights Reserved.</p>
     <div style="margin-top: 10px;">
         <a href="index.html" style="color:#aaa; text-decoration:none; margin: 0 10px;">Home</a>
-        <a href="privacy.html" style="color:#aaa; text-decoration:none; margin: 0 10px;">Privacy Policy</a>
+        <a href="privacypolicy.html" style="color:#aaa; text-decoration:none; margin: 0 10px;">Privacy Policy</a>
     </div>
 </footer>
 
