--- a/up.html
+++ b/up.html
@@ -124,7 +124,7 @@
     <div class="footer-links">
             <a href="about.html">About Us</a> | 
             <a href="contact.html">Contact</a> | 
-            <a href="privacy.html">Privacy Policy</a>
+            <a href="privacypolicy.html">Privacy Policy</a>
     </div>
 </footer>
 
