--- a/index.html
+++ b/index.html
@@ -152,7 +152,16 @@
         </table>
     </div>
 
-    <div class="ad-space">ADSTERRA LARGE RECTANGLE (300x250)</div>
+    <div class="ad-space"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></div>
 
     <h2 class="section-title">Important FAQs (Help Desk)</h2>
     <div class="info-card">
