--- a/up.html
+++ b/up.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=4.0">
     <title>UP Scholarship Status 2026 | Check Payment Status</title>
     <style>
+        /* Mobile Optimization */
+@media (max-width: 600px) {
+    h1 {
+        font-size: 22px !important; /* Title chota ho jayega taaki screen mein fit aaye */
+        word-wrap: break-word;
+    }
+    .header, .nav {
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box; /* Isse padding screen se bahar nahi jayegi */
+    }
+    body {
+        overflow-x: hidden; /* Side scrolling khatam karne ke liye */
+    }
+}
+
         /* General Styles */
         body { font-family: 'Roboto', sans-serif; margin: 0; padding: 0; background-color: #f4f7f6; color: #333; }
         a { text-decoration: none; }
