--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
             <a href="assam.html" class="state-card">Assam</a>
     </div>
 
-    <div class="ad-space">ADSTERRA NATIVE AD (Grid Style)</div>
+    <div class="ad-space"><script async="async" data-cfasync="false" src="https://pl28621969.effectivegatecpm.com/08002074cc70a6cd71aeee16f6083a2e/invoke.js"></script>
+<div id="container-08002074cc70a6cd71aeee16f6083a2e"></div></div>
 
     <h2 class="section-title">How to Check Status Online?</h2>
     <div class="info-card">
