--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 <footer>
     <div style="margin-bottom: 20px;">
-        <a href="#">Home</a> | <a href="about.html">About Us</a> | <a href="privacypolicy.html">Privacy Policy</a> | <a href="diclaimer.html">Disclaimer</a> | <a href="phone.html">Contact</a>
+        <a href="#">Home</a> | <a href="about.html">About Us</a> | <a href="privacypolicy.html">Privacy Policy</a> | <a href="disclaimer.html">Disclaimer</a> | <a href="phone.html">Contact</a>
     </div>
     <p>&copy; 2026 ScholarshipDirect.github.io | All Rights Reserved.</p>
     <p style="font-size: 11px; margin-top: 10px;">Disclaimer: This is not an official government website. We provide information for educational purposes only.</p>
