--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ScholarshipDirect | Check All India Scholarship Status 2026</title>
+  <title>ScholarshipDirect | Check All India Scholarship Status 2026</title>
     <style>
+
+        html, body {
+    max-width: 100%;
+    overflow-x: hidden; /* Side scrolling ko block karega */
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 15px; /* Side se barabar jagah chhodega */
+    box-sizing: border-box;
+}
+
+        
         /* General Setup */
         :root { --primary-blue: #0d1b44; --accent-red: #d90429; --light-bg: #f8f9fa; }
         body { font-family: 'Segoe UI', Arial, sans-serif; margin: 0; padding: 0; background-color: var(--light-bg); line-height: 1.6; }
@@ -45,7 +57,19 @@
         .step-list li { margin-bottom: 15px; }
 
         /* Adsterra Spaces */
-        .ad-space { background: #eee; border: 1px dashed #bbb; padding: 20px; text-align: center; margin: 30px 0; border-radius: 8px; font-size: 12px; color: #888; }
+        .ad-space {
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.ad-space img {
+    max-width: 100%;
+    height: auto;
+}
+
 
         /* Table Style */
         .doc-table { width: 100%; border-collapse: collapse; background: white; border-radius: 10px; overflow: hidden; }
