--- a/up.html
+++ b/up.html
@@ -119,7 +119,16 @@
     </div>
 
     <div class="ad-container">
-        <p style="color:#aaa; font-size:12px;">ADVERTISEMENT</p>
+        <p style="color:#aaa; font-size:12px;"><script>
+  atOptions = {
+    'key' : '40352fcef885a28cef4cccfde9bd11de',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/40352fcef885a28cef4cccfde9bd11de/invoke.js"></script></p>
     </div>
 
     <div class="info-card" id="apply">
@@ -154,7 +163,7 @@
         </div>
     </div>
 
-    <div class="ad-container">-- Adsterra Native Ad Code --</div>
+    <div class="ad-container"><script src="https://pl28628486.effectivegatecpm.com/b0/c2/03/b0c203878f35a99f05d29bb5f7f9ac6d.js"></script></div>
 
     <div class="info-card">
         <div class="card-header">📄 Required Documents List</div>
@@ -169,7 +178,8 @@
         </div>
     </div>
 
-    <div class="ad-container">-- Adsterra In-Feed Ad Code --</div>
+    <div class="ad-container"><script async="async" data-cfasync="false" src="https://pl28621969.effectivegatecpm.com/08002074cc70a6cd71aeee16f6083a2e/invoke.js"></script>
+<div id="container-08002074cc70a6cd71aeee16f6083a2e"></div></div>
 
     <div class="info-card" id="faq">
         <div class="card-header">❓ Help Desk & FAQs</div>
