--- a/up.html
+++ b/up.html
@@ -64,7 +64,18 @@
         @keyframes pulse { 0% {transform: scale(1);} 50% {transform: scale(1.03);} 100% {transform: scale(1);} }
 
         /* AD SPACES */
-        .ad-container { background: #fdfdfd; border: 1px dashed #cbd5e0; padding: 25px; text-align: center; margin: 35px 0; border-radius: 12px; min-height: 100px; }
+        .ad-space {
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.ad-space img {
+    max-width: 100%;
+    height: auto;
+}
 
         /* DATA CARDS */
         .info-card { background: var(--white); padding: 35px; border-radius: 15px; margin-bottom: 35px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
