--- a/up.html
+++ b/up.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UP Scholarship Status 2025-26 | Check Payment & Registration</title>
     <style>
+        html, body {
+    max-width: 100%;
+    overflow-x: hidden; /* Side scrolling ko block karega */
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 15px; /* Side se barabar jagah chhodega */
+    box-sizing: border-box;
+}
+
+        
         :root {
             --primary: #0d1b44;
             --secondary: #ff9100;
