--- a/up.html
+++ b/up.html
@@ -141,7 +141,7 @@
     <div class="status-hero" id="status">
         <h2>🏦 Check Your Scholarship Bank Credit Status</h2>
         <p>Has your money been credited? Track your live payment status below.</p>
-        <a href="https://pfms.nic.in/" target="_blank" class="pfms-btn">TRACK PFMS STATUS NOW</a>
+        <a href="https://pfms.nic.in/SitePages/KnowYourPayment_Dw_NewNew.aspx" target="_blank" class="pfms-btn">TRACK PFMS STATUS NOW</a>
         <p style="margin-top: 15px; font-size: 13px; color: #718096;">*Ensure your Aadhaar is linked with your bank via NPCI.</p>
     </div>
 
