--- a/punjab.html
+++ b/punjab.html
@@ -58,7 +58,7 @@
 <div class="container">
 
     <div class="ad-banner">
-        <small>ADVERTISEMENT</small>
+        <small><script src="https://pl28628487.effectivegatecpm.com/04/81/bf/0481bf0cc784847ea5a5b038facfa14a.js"></script></small>
     </div>
 
     <section>
@@ -78,7 +78,7 @@
     </section>
 
     <div class="ad-banner">
-        <small>ADVERTISEMENT</small>
+        <small><script src="https://pl28628487.effectivegatecpm.com/04/81/bf/0481bf0cc784847ea5a5b038facfa14a.js"></script></small>
     </div>
 
     <section>
@@ -111,7 +111,7 @@
     </section>
 
     <div class="ad-banner">
-        <small>ADVERTISEMENT</small>
+        <small><script src="https://pl28628486.effectivegatecpm.com/b0/c2/03/b0c203878f35a99f05d29bb5f7f9ac6d.js"></script></small>
     </div>
 
     <section>
