--- a/maharashtra.html
+++ b/maharashtra.html
@@ -55,7 +55,16 @@
 <div class="container">
 
     <div class="ad-container">
-        <p style="color:#aaa; font-size: 0.7rem;">ADVERTISEMENT</p>
+        <p style="color:#aaa; font-size: 0.7rem;"><script>
+  atOptions = {
+    'key' : '40352fcef885a28cef4cccfde9bd11de',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/40352fcef885a28cef4cccfde9bd11de/invoke.js"></script></p>
     </div>
 
     <section>
@@ -75,7 +84,16 @@
     </section>
 
     <div class="ad-container">
-        <p style="color:#aaa; font-size: 0.7rem;">ADVERTISEMENT</p>
+        <p style="color:#aaa; font-size: 0.7rem;"><script>
+  atOptions = {
+    'key' : '40352fcef885a28cef4cccfde9bd11de',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/40352fcef885a28cef4cccfde9bd11de/invoke.js"></script></p>
     </div>
 
     <section>
@@ -116,7 +134,16 @@
     </section>
 
     <div class="ad-container">
-        <p style="color:#aaa; font-size: 0.7rem;">ADVERTISEMENT</p>
+        <p style="color:#aaa; font-size: 0.7rem;"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></p>
     </div>
 
     <section>
