--- a/westbengal.html
+++ b/westbengal.html
@@ -55,7 +55,16 @@
 <div class="container">
 
     <div class="ad-banner">
-        <span style="color:#999; font-size: 0.8rem;">ADVERTISING PARTNER CONTENT</span>
+        <span style="color:#999; font-size: 0.8rem;"><script>
+  atOptions = {
+    'key' : '40352fcef885a28cef4cccfde9bd11de',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/40352fcef885a28cef4cccfde9bd11de/invoke.js"></script></span>
     </div>
 
     <section>
@@ -84,7 +93,16 @@
     </section>
 
     <div class="ad-banner">
-        <span style="color:#999; font-size: 0.8rem;">PROMOTED CONTENT</span>
+        <span style="color:#999; font-size: 0.8rem;"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></span>
     </div>
 
     <section style="background: #fff8f0;">
@@ -120,7 +138,16 @@
     </section>
 
     <div class="ad-banner">
-        <span style="color:#999; font-size: 0.8rem;">ADVERTISING</span>
+        <span style="color:#999; font-size: 0.8rem;"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></span>
     </div>
 
     <section>
