--- a/odisha.html
+++ b/odisha.html
@@ -53,7 +53,16 @@
 <div class="container">
 
     <div class="ad-container">
-        <span style="color:#bbb; font-size: 0.7rem; letter-spacing: 2px;">SPONSORED CONTENT</span>
+        <span style="color:#bbb; font-size: 0.7rem; letter-spacing: 2px;"><script>
+  atOptions = {
+    'key' : '40352fcef885a28cef4cccfde9bd11de',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/40352fcef885a28cef4cccfde9bd11de/invoke.js"></script></span>
     </div>
 
     <section>
@@ -82,7 +91,16 @@
     </section>
 
     <div class="ad-container">
-        <span style="color:#bbb; font-size: 0.7rem; letter-spacing: 2px;">ADVERTISEMENT</span>
+        <span style="color:#bbb; font-size: 0.7rem; letter-spacing: 2px;"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></span>
     </div>
 
     <section>
@@ -127,7 +145,16 @@
     </section>
 
     <div class="ad-container">
-        <span style="color:#bbb; font-size: 0.7rem; letter-spacing: 2px;">ADVERTISING</span>
+        <span style="color:#bbb; font-size: 0.7rem; letter-spacing: 2px;"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></span>
     </div>
 
     <section>
