--- a/gujarat.html
+++ b/gujarat.html
@@ -102,7 +102,16 @@
 <div class="container">
 
     <div class="ad-slot">
-        <p style="color:#ccc; font-size: 0.8rem;">ADVERTISING UNIT</p>
+        <p style="color:#ccc; font-size: 0.8rem;"><script>
+  atOptions = {
+    'key' : '40352fcef885a28cef4cccfde9bd11de',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/40352fcef885a28cef4cccfde9bd11de/invoke.js"></script></p>
     </div>
 
     <section>
@@ -122,7 +131,16 @@
     </section>
 
     <div class="ad-slot">
-        <p style="color:#ccc; font-size: 0.8rem;">PROMOTED AD</p>
+        <p style="color:#ccc; font-size: 0.8rem;"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></p>
     </div>
 
     <section>
@@ -150,7 +168,16 @@
     </section>
 
     <div class="ad-slot">
-        <p style="color:#ccc; font-size: 0.8rem;">ADVERTISEMENT</p>
+        <p style="color:#ccc; font-size: 0.8rem;"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></p>
     </div>
 
 </div>
