--- a/kerala.html
+++ b/kerala.html
@@ -104,7 +104,16 @@
 <div class="container">
 
     <div class="ad-slot">
-        <small style="color:#94a3b8; font-weight: 600; letter-spacing: 1px;">ADVERTISEMENT</small>
+        <small style="color:#94a3b8; font-weight: 600; letter-spacing: 1px;"><script>
+  atOptions = {
+    'key' : '40352fcef885a28cef4cccfde9bd11de',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/40352fcef885a28cef4cccfde9bd11de/invoke.js"></script></small>
     </div>
 
     <section>
@@ -142,7 +151,16 @@
     </section>
 
     <div class="ad-slot">
-        <small style="color:#94a3b8; font-weight: 600; letter-spacing: 1px;">PROMOTED CONTENT</small>
+        <small style="color:#94a3b8; font-weight: 600; letter-spacing: 1px;"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></small>
     </div>
 
     <section>
@@ -158,7 +176,16 @@
     </section>
 
     <div class="ad-slot">
-        <small style="color:#94a3b8; font-weight: 600; letter-spacing: 1px;">ADVERTISEMENT</small>
+        <small style="color:#94a3b8; font-weight: 600; letter-spacing: 1px;"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></small>
     </div>
 
 </div>
