--- a/chhattisgarh.html
+++ b/chhattisgarh.html
@@ -101,7 +101,16 @@
 <div class="container">
 
     <div class="ad-zone">
-        <small style="color:#bbb">ADVERTISEMENT</small>
+        <small style="color:#bbb"><script>
+  atOptions = {
+    'key' : '40352fcef885a28cef4cccfde9bd11de',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/40352fcef885a28cef4cccfde9bd11de/invoke.js"></script></small>
     </div>
 
     <section>
@@ -134,7 +143,16 @@
     </section>
 
     <div class="ad-zone">
-        <small style="color:#bbb">PROMOTED CONTENT</small>
+        <small style="color:#bbb"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></small>
     </div>
 
     <section>
@@ -150,7 +168,16 @@
     </section>
 
     <div class="ad-zone">
-        <small style="color:#bbb">ADVERTISEMENT</small>
+        <small style="color:#bbb"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></small>
     </div>
 
 </div>
