--- a/assam.html
+++ b/assam.html
@@ -126,7 +126,16 @@
     <div class="main-content">
         
         <div class="ad-container">
-            <div class="ad-label">ADVERTISEMENT</div>
+            <div class="ad-label"><script>
+  atOptions = {
+    'key' : '40352fcef885a28cef4cccfde9bd11de',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/40352fcef885a28cef4cccfde9bd11de/invoke.js"></script></div>
             <p style="color:#eee">Adsterra Ad Display Area</p>
         </div>
 
@@ -169,7 +178,16 @@
     </section>
 
     <div class="ad-container">
-        <div class="ad-label">SPONSORED</div>
+        <div class="ad-label"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></div>
         <p style="color:#eee">Native Ad Display</p>
     </div>
 
@@ -202,7 +220,16 @@
     </section>
 
     <div class="ad-container">
-        <div class="ad-label">ADVERTISEMENT</div>
+        <div class="ad-label"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></div>
         </div>
 
     <section id="documents">
@@ -252,7 +279,16 @@
     </section>
 
     <div class="ad-container" style="min-height: 100px;">
-        <div class="ad-label">ADVERTISEMENT</div>
+        <div class="ad-label"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></div>
         </div>
 
     <section id="faq">
@@ -283,7 +319,16 @@
         </div>
 
         <div class="ad-container" style="min-height: 400px;">
-            <div class="ad-label">ADVERTISEMENT</div>
+            <div class="ad-label"><script>
+  atOptions = {
+    'key' : '2a6d01116eb3975384f3cc8cb97ae8a0',
+    'format' : 'iframe',
+    'height' : 250,
+    'width' : 300,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/2a6d01116eb3975384f3cc8cb97ae8a0/invoke.js"></script></div>
             <p style="color:#eee">Sidebar Ad</p>
         </div>
 
