--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
             <h3>संपर्क करें (Contact Us)</h3>
             <p>यदि आपके पास कोई सुझाव है या आप किसी तकनीकी समस्या की रिपोर्ट करना चाहते हैं, तो हमें ईमेल करें:</p>
             <p><strong>ईमेल:</strong> support@scholarshipdirect.github.io</p>
-            <p><strong>यूट्यूब/टेलीग्राम:</strong> [अपना लिंक यहाँ डालें]</p>
+            <p><strong>यूट्यूब/टेलीग्राम:</strong>upcoming</p>
         </div>
     </div>
 
