--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
     });
   });
 </script>
+
+<meta name="google-site-verification" content="WMNr2Ryr6xMZMFBZaUvD1zMqLzkNpcTKY_K2Y4ylRaQ" />
 </head>
 <body>
 
